--- a/app/src/main/res/layout/fragment_my_circle.xml
+++ b/app/src/main/res/layout/fragment_my_circle.xml
@@ -53,6 +53,7 @@
             <RelativeLayout
                 android:id="@+id/dynamic_collect"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="-1dp"
                 android:background="@drawable/item_toggle_bg"
                 android:paddingLeft="@dimen/phone_apadding"
                 android:layout_height="@dimen/phone_item_height">
@@ -77,6 +78,34 @@
                     android:layout_alignBottom="@+id/textView30"
                     android:layout_toEndOf="@+id/textView30" />
             </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/dynamic_publish"
+                android:layout_width="match_parent"
+                android:background="@drawable/item_toggle_bg"
+                android:paddingLeft="@dimen/phone_apadding"
+              
+                android:layout_height="@dimen/phone_item_height">
+                <com.nju.View.SchoolFriendAweTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/publish_icon"
+                    android:layout_marginEnd="@dimen/padding_left"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:id="@+id/tv11"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/publish_dynamic"
+                    android:textColor="@android:color/black"
+                    android:layout_alignBottom="@+id/tv11"
+                    android:layout_toEndOf="@+id/tv11" />
+            </RelativeLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,6 +145,7 @@
             <RelativeLayout
                 android:id="@+id/voice_collect"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="-1dp"
                 android:background="@drawable/item_toggle_bg"
                 android:paddingLeft="@dimen/phone_apadding"
                 android:layout_height="@dimen/phone_item_height">
@@ -138,6 +168,32 @@
                     android:textColor="@android:color/black"
                     android:layout_alignBottom="@+id/tv0"
                     android:layout_toEndOf="@+id/tv0" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/voice_publish"
+                android:layout_width="match_parent"
+                android:background="@drawable/item_toggle_bg"
+                android:paddingLeft="@dimen/phone_apadding"
+                android:layout_height="@dimen/phone_item_height">
+                <com.nju.View.SchoolFriendAweTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/publish_icon"
+                    android:layout_marginEnd="@dimen/padding_left"
+                    android:textColor="@android:color/holo_green_dark"
+                    android:id="@+id/tv10"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/publish_voice"
+                    android:textColor="@android:color/black"
+                    android:layout_alignBottom="@+id/tv10"
+                    android:layout_toEndOf="@+id/tv10" />
             </RelativeLayout>
 
             <TextView
@@ -218,7 +274,6 @@
                     android:id="@+id/tv4"
                     android:layout_centerVertical="true"
                     android:layout_alignParentStart="true" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
