--- a/app/src/main/res/layout/fragment_publish_dynamic.xml
+++ b/app/src/main/res/layout/fragment_publish_dynamic.xml
@@ -1,9 +1,117 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.PublishDynamicFragment">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#F5F5F5"
+    android:paddingTop="@dimen/phone_apadding"
+    android:id="@+id/publish_wei_bo_main_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:id="@+id/publish_wei_bo_scroll_layout"
+            >
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:id="@+id/publish_wei_bo_layout"
+                android:duplicateParentState="true"
+                android:background="@drawable/publish_content_edittext_bg"
+                android:layout_height="wrap_content">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+                <com.nju.View.SchoolFriendEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="@dimen/phone_apadding"
+                    android:background="@drawable/publish_content_layout_bg"
+                    android:inputType="textMultiLine"
+                    android:paddingTop="5dp"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:paddingEnd="@dimen/phone_apadding"
+                    android:hint="@string/please_input_content"
+                    android:gravity="top"
+                    android:minLines="5"
+                    android:id="@+id/content_editText" />
+                <com.nju.View.SchoolFriendAweTextView
+                    android:id="@+id/add_pic"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:layout_width="match_parent"
+                    android:text="@string/add_pic_icon"
+                    android:textColor="@android:color/darker_gray"
+                    android:fontFamily="sans-serif-thin"
+                    android:background="@android:color/white"
+                    android:textSize="60sp"
+                    android:layout_height="wrap_content" />
+                <com.nju.View.SchoolFriendGridView
+                    android:id="@+id/pics_gridview"
+                    android:paddingBottom="@dimen/phone_apadding"
+                    android:numColumns="4"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:paddingEnd="@dimen/phone_apadding"
+                    android:horizontalSpacing="@dimen/phone_apadding"
+                    android:verticalSpacing="@dimen/phone_apadding"
+                    android:background="@android:color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/publish_content_layout_bg"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/location"
+                    android:textColor="@android:color/black"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:paddingBottom="@dimen/phone_apadding"
+                    android:id="@+id/publish_wei_bo_userloaction_text"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="@dimen/phone_apadding"
+                    android:background="@color/gray"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="-10dp"
+                    android:background="@color/gray"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/phone_apadding"
+                    android:layout_height="@dimen/phone_item_height"
+                    android:background="@android:color/white"
+                    android:id="@+id/fragment_publish_text_with_pics_relativeLayout">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="@string/wh0_scan"
+                        android:textColor="@android:color/black"
+                        android:id="@+id/textView2"
+                        android:layout_centerVertical="true"
+                        android:paddingStart="@dimen/phone_apadding"
+                        />
 
-</FrameLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="@string/school_scan"
+                        android:id="@+id/textView4"
+                        android:paddingRight="@dimen/padding_left"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true" />
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="@dimen/phone_apadding"
+                    android:background="@color/gray"/>
+            </LinearLayout>
+        </ScrollView>
+    </FrameLayout>
+    <include layout="@layout/emotion_layout"/>
+</RelativeLayout>
+
