--- a/app/src/main/res/layout/refresh_listview.xml
+++ b/app/src/main/res/layout/refresh_listview.xml
@@ -1,15 +1,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@android:color/white"
+    android:background="@color/light_gray"
+    android:layout_marginTop="@dimen/phone_apadding"
+
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.nju.fragment.DynamicCollectFragment">
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ListView
             android:id="@+id/listView"
+            android:dividerHeight="@dimen/phone_apadding"
             android:layout_width="match_parent"
+            android:layout_marginBottom="50dp"
             android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
