--- a/app/src/main/res/layout/fragment_alumni_voice_item_detail.xml
+++ b/app/src/main/res/layout/fragment_alumni_voice_item_detail.xml
@@ -70,6 +70,7 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/phone_apadding"
                         android:textColor="@android:color/black"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:layout_toEndOf="@+id/alumni_vo_imageView"
@@ -79,12 +80,10 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-
                         android:layout_marginBottom="@dimen/phone_apadding"
                         android:id="@+id/linearLayout2"
                         android:layout_below="@+id/alumni_vo_desc"
                         android:layout_alignStart="@+id/alumni_vo_date" />
-
                 </RelativeLayout>
             </ScrollView>
             <include layout="@layout/tool_bar"/>
