--- a/app/src/main/res/layout/refresh_listview.xml
+++ b/app/src/main/res/layout/refresh_listview.xml
@@ -7,12 +7,13 @@
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ListView
             android:id="@+id/listView"
             android:dividerHeight="@dimen/phone_apadding"
+            android:divider="@color/light_gray"
+            android:footerDividersEnabled="false"
             android:layout_width="match_parent"
             android:layout_marginBottom="50dp"
             android:layout_height="match_parent"/>
