--- a/app/src/main/res/layout/fragment_recommend_work_item.xml
+++ b/app/src/main/res/layout/fragment_recommend_work_item.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="match_parent" tools:context="com.nju.fragment.RecommendWorkItem">
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,7 +9,7 @@
         android:layout_height="match_parent">
         <ListView
             android:id="@+id/fragment_recommend_work_item_listview"
-            android:paddingTop="@dimen/phone_apadding"
+            android:layout_marginTop="@dimen/padding_left"
             android:paddingStart="@dimen/phone_apadding"
             android:paddingEnd="@dimen/phone_apadding"
             android:layout_width="match_parent"
