--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="phone_apadding">10dp</dimen>
     <dimen name="phone_item_height">60dp</dimen>
     <dimen name="bottom_choose_height">60dp</dimen>
+    <dimen name="small_circle">50dp</dimen>
 </resources>
