--- a/app/src/main/res/layout/fragment_tu_cao.xml
+++ b/app/src/main/res/layout/fragment_tu_cao.xml
@@ -1,18 +1,25 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/phone_apadding"
         android:layout_alignParentTop="true">
-        <android.support.v4.view.ViewPager
-            android:id="@+id/fragment_alumni_voice_viewpage"
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            />
+            android:layout_height="match_parent">
+            <ListView
+                android:id="@+id/listView"
+                android:paddingStart="@dimen/phone_apadding"
+                android:paddingEnd="@dimen/phone_apadding"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
         <include layout="@layout/hand_touch_bn"/>
     </FrameLayout>
     <include layout="@layout/college_choose_dialog"/>
