--- a/app/src/main/res/layout/main_viewpager.xml
+++ b/app/src/main/res/layout/main_viewpager.xml
@@ -54,7 +54,19 @@
                     android:text="@string/trash_icon"
                     android:id="@+id/main_viewpager_menu_delete_img"
                     />
-
+                <com.nju.View.SchoolFriendAweTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:textSize="32sp"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:paddingLeft="@dimen/button_padding"
+                    android:paddingRight="@dimen/button_padding"
+                    android:visibility="gone"
+                    android:text="@string/ellipsis_icon"
+                    android:id="@+id/main_viewpager_menu_more"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
