--- a/app/src/main/res/layout/fragment_publish_voice.xml
+++ b/app/src/main/res/layout/fragment_publish_voice.xml
@@ -80,24 +80,19 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="@dimen/phone_apadding"
                     android:background="@color/gray"/>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="-10dp"
-                    android:background="@color/gray"/>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_marginTop="@dimen/phone_apadding"
                     android:layout_height="@dimen/phone_item_height"
-                    android:background="@android:color/white"
-                    android:id="@+id/fragment_publish_text_with_pics_relativeLayout">
+                    android:background="@drawable/item_toggle_bg"
+                    android:id="@+id/who_scan_relativeLayout">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="@string/wh0_scan"
                         android:textColor="@android:color/black"
-                        android:id="@+id/textView2"
                         android:layout_centerVertical="true"
                         android:paddingStart="@dimen/phone_apadding"
                         />
@@ -107,16 +102,12 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="@string/school_scan"
-                        android:id="@+id/textView4"
+                        android:id="@+id/whoScanTV"
                         android:paddingRight="@dimen/padding_left"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true" />
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="@dimen/phone_apadding"
-                    android:background="@color/gray"/>
+
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
