--- a/app/src/main/res/layout/fragment_person_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_person_ask_detail.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:background="@android:color/white"
         xmlns:android="http://schemas.android.com/apk/res/android">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -15,6 +14,7 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/phone_item_height"
                 android:layout_alignParentTop="true"
                 >
                 <LinearLayout
@@ -46,6 +46,7 @@
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
                         android:paddingTop="@dimen/phone_apadding"
+                        android:paddingBottom="@dimen/phone_item_height"
                         android:layout_height="wrap_content">
                         <TextView
                             android:layout_width="wrap_content"
