--- a/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
+++ b/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
@@ -47,7 +47,7 @@
                         android:text="1"
                         android:layout_alignBottom="@+id/alumni_vo_name"
                         android:layout_toEndOf="@+id/alumni_vo_name" />
-                    <TextView
+                    <com.nju.View.SchoolFriendTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -66,7 +66,7 @@
                         android:layout_marginBottom="150dp"
                         android:layout_below="@+id/alumni_vo_desc"
                         android:layout_alignStart="@+id/alumni_vo_desc" />
-                    <TextView
+                    <com.nju.View.SchoolFriendTextView
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -80,7 +80,6 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-
                         android:layout_marginBottom="@dimen/phone_apadding"
                         android:id="@+id/linearLayout2"
                         android:layout_below="@+id/alumni_vo_desc"
