--- a/app/src/main/res/layout/recommend_work_item_list_item.xml
+++ b/app/src/main/res/layout/recommend_work_item_list_item.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
      >
-    <TextView
+    <com.nju.View.SchoolFriendTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -27,7 +27,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-
         android:id="@+id/re_list_item_label"
         android:layout_alignBottom="@+id/re_list_item_name"
         android:layout_toEndOf="@+id/re_list_item_name" />
@@ -35,7 +34,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-
         android:id="@+id/re_list_item_date"
         android:layout_alignBottom="@+id/fragment_re_list_item_count"
         android:layout_alignParentStart="true" />
@@ -45,13 +43,13 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/fragment_re_list_item_count"
         android:text="2"
-
         android:textColor="@android:color/black"
         android:layout_below="@+id/re_list_item_name"
         android:layout_toStartOf="@+id/textView15" />
 
     <com.nju.View.SchoolFriendAweTextView
         android:layout_width="wrap_content"
+        android:layout_marginEnd="@dimen/phone_apadding"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/comment_icon"
