--- a/app/src/main/res/layout/hand_touch_bn.xml
+++ b/app/src/main/res/layout/hand_touch_bn.xml
@@ -5,9 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="end|bottom"
     android:padding="0dp"
-    android:alpha="0.5"
-    app:backgroundTint="#EEEEEE"
-    android:src="@drawable/gray_big_circle"
+    android:src="@drawable/hand"
     android:layout_marginEnd="10dp"
     android:layout_marginBottom="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
